<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:id="@+id/rootView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <include layout="@layout/include_app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingBottom="@dimen/content_inset"
          android:paddingLeft="@dimen/content_inset"
          android:paddingRight="@dimen/content_inset"
          >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="@dimen/content_inset"
            >

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/inputName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/site_name"
              android:inputType="textPersonName|textCapWords|textAutoCorrect"
              style="@style/NockText.Body"
              />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/urlTiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="@dimen/content_inset_half"
            >

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/inputUrl"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/site_url"
              android:inputType="textUri"
              style="@style/NockText.Body"
              />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textUrlWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_text_spacing"
            android:text="@string/warning_http_url"
            android:visibility="gone"
            style="@style/NockText.Footnote"
            />

        <include layout="@layout/include_divider"/>

        <com.afollestad.nocknock.viewcomponents.interval.ValidationIntervalLayout
            android:id="@+id/checkIntervalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset_less"
            android:text="@string/response_timeout"
            style="@style/NockText.SectionHeader"
            />

        <EditText
            android:id="@+id/responseTimeoutInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-4dp"
            android:layout_marginStart="-4dp"
            android:layout_marginTop="@dimen/content_inset_quarter"
            android:hint="@string/response_timeout_default"
            android:inputType="number"
            android:maxLength="8"
            tools:ignore="Autofill,HardcodedText,LabelFor"
            style="@style/NockText.Body"
            />

        <TextView
            android:id="@+id/responseValidationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset_more"
            android:text="@string/response_validation_mode"
            style="@style/NockText.SectionHeader"
            />

        <Spinner
            android:id="@+id/responseValidationMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/responseValidationSearchTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_inset_less"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="-4dp"
            android:hint="@string/search_term"
            android:visibility="gone"
            tools:ignore="Autofill,TextFields"
            style="@style/NockText.Body"
            />

        <com.afollestad.nocknock.viewcomponents.js.JavaScriptInputLayout
            android:id="@+id/scriptInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_inset"
            android:layout_marginTop="@dimen/content_inset_half"
            android:background="@color/lighterGray"
            />

        <TextView
            android:id="@+id/validationModeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_inset_half"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/validation_mode_status_desc"
            style="@style/NockText.Body.Light"
            />

        <com.afollestad.nocknock.viewcomponents.retrypolicy.RetryPolicyLayout
            android:id="@+id/retryPolicyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset_more"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset_double"
            android:text="@string/add_site"
            style="@style/AccentButton"
            />

      </LinearLayout>

    </ScrollView>

  </LinearLayout>

  <com.afollestad.nocknock.viewcomponents.LoadingIndicatorFrame
      android:id="@+id/loadingProgress"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />

</FrameLayout>
