<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:id="@+id/rootView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="?colorPrimary"
      android:orientation="vertical"
      >

    <!-- Background is applied again here so programmatic elevation works -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:theme="@style/FlatToolbarTheme"
        app:navigationIcon="@drawable/ic_action_close"
        app:title="@string/view_site"
        app:titleTextColor="?android:textColorPrimary"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingBottom="@dimen/content_inset"
          android:paddingLeft="@dimen/content_inset"
          android:paddingRight="@dimen/content_inset"
          android:paddingTop="@dimen/content_inset_half"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

          <com.afollestad.nocknock.viewcomponents.StatusImageView
              android:id="@+id/iconStatus"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:layout_marginEnd="@dimen/content_inset"
              android:scaleType="centerInside"
              android:transitionName="status_image_view"
              tools:ignore="ContentDescription,UnusedAttribute"
              />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              >

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:hint="@string/site_name"
                android:inputType="textPersonName|textCapWords|textAutoCorrect"
                android:singleLine="true"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorSecondary"
                android:textSize="@dimen/body_font_size"
                android:transitionName="site_name"
                tools:ignore="Autofill,UnusedAttribute"
                />

            <EditText
                android:id="@+id/inputUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:hint="@string/site_url"
                android:inputType="textUri"
                android:singleLine="true"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorSecondary"
                android:textSize="@dimen/body_font_size"
                android:transitionName="site_url"
                tools:ignore="Autofill,UnusedAttribute"
                />

            <TextView
                android:id="@+id/textUrlWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/list_text_spacing"
                android:fontFamily="@font/lato_light"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/caption_font_size"
                android:visibility="gone"
                tools:text="Warning: this app checks for server availability with HTTP requests. It's recommended that you use an HTTP URL."
                />

          </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/include_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/content_inset_less"
            />

        <com.afollestad.nocknock.viewcomponents.CheckIntervalLayout
            android:id="@+id/checkIntervalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/content_inset_less"
            android:background="@color/dividerColorDark"
            />

        <TextView
            android:id="@+id/responseValidationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset"
            android:fontFamily="@font/lato"
            android:text="@string/response_validation_mode"
            android:textColor="?colorAccent"
            android:textSize="@dimen/caption_font_size"
            />

        <Spinner
            android:id="@+id/responseValidationMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/responseValidationSearchTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_inset_less"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginTop="-4dp"
            android:fontFamily="@font/lato_light"
            android:hint="@string/search_term"
            android:textSize="@dimen/body_font_size"
            android:visibility="gone"
            tools:ignore="Autofill,TextFields"
            />

        <com.afollestad.nocknock.viewcomponents.JavaScriptInputLayout
            android:id="@+id/scriptInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_inset"
            android:layout_marginTop="@dimen/content_inset_half"
            android:background="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/validationModeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_inset_half"
            android:fontFamily="@font/lato"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/validation_mode_status_desc"
            android:textSize="@dimen/body_font_size"
            />

        <include layout="@layout/include_divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset"
            android:text="@string/last_check_result"
            android:textColor="?colorAccent"
            android:textSize="@dimen/caption_font_size"
            />

        <TextView
            android:id="@+id/textLastCheckResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_text_spacing"
            android:fontFamily="@font/lato"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/medium_text_size"
            tools:text="Everything checks out!"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset"
            android:text="@string/next_check"
            android:textColor="?colorAccent"
            android:textSize="@dimen/caption_font_size"
            />

        <TextView
            android:id="@+id/textNextCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_text_spacing"
            android:fontFamily="@font/lato"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/medium_text_size"
            tools:text="In 2 hours"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset_double"
            android:text="@string/save_changes"
            style="@style/AccentButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/disableChecksButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_inset_half"
            android:text="@string/disable_automatic_checks"
            style="@style/PrimaryDarkButton"
            />

      </LinearLayout>

    </ScrollView>

  </LinearLayout>

  <com.afollestad.nocknock.viewcomponents.LoadingIndicatorFrame
      android:id="@+id/loadingProgress"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />

</FrameLayout>
